--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/system": "^5.15.0",
     "chart.js": "^4.4.1",
+    "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.7",
